--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "lint": "npx eslint src"
   },
   "dependencies": {
-    "@astrojs/markdoc": "^0.5.0",
-    "@astrojs/netlify": "^3.0.1",
-    "@astrojs/preact": "^2.2.2",
-    "@astrojs/react": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@supabase/supabase-js": "^2.33.1",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^3.0.8",
+    "@astrojs/markdoc": "^0.7.2",
+    "@astrojs/netlify": "^3.0.4",
+    "@astrojs/preact": "^3.0.1",
+    "@astrojs/react": "^3.0.5",
+    "@astrojs/tailwind": "^5.0.2",
+    "@supabase/supabase-js": "^2.38.4",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "astro": "^3.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.274.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
+    "lucide-react": "^0.292.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.10",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
