--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@*": ["src/*"]
+      "@*": ["src/*"],
+      "@styles-global": [
+        "src/styles/global.css"
+      ],
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
